zero-schema-macros/tests/ui/fail/16_u16cstr_endian.stderr
error: this zero option is not applicable to this string field
 --> tests/ui/fail/16_u16cstr_endian.rs:7:12
  |
7 |     value: &'a U16CStr,
  |            ^
